--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
 
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     compile 'com.mashape.unirest:unirest-java:1.4.9'
     testCompile 'junit:junit:4.12'
