--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,12 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'java'
 apply plugin: 'kotlin-spring' // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
-apply plugin: 'org.springframework.boot'
 
 repositories {
     jcenter()
@@ -27,10 +25,8 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    implementation "org.telegram:telegrambots:4.1"
 
-    compile 'org.springframework.boot:spring-boot-starter-web'
-
-    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
     compile 'com.mashape.unirest:unirest-java:1.4.9'
