--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'java'
+apply plugin: 'application'
 apply plugin: 'kotlin-spring' // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
+mainClassName='telegram.ApplicationKt'
 
 repositories {
     jcenter()
@@ -33,16 +35,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-task stage(dependsOn: ['customFatJar'])
+task stage(dependsOn: ['installDist'])
 
-task customFatJar(type: Jar) {
+/*task customFatJar(type: Jar) {
     manifest {
         attributes 'Main-Class': 'telegram.ApplicationKt'
     }
     baseName = project.name
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
-}
+}*/
 sourceCompatibility = 1.8
 
 compileKotlin {
